<resources>
    <string name="app_name">My Birthday</string>
    <string name="splash_text">Haroons Birthday</string>
    <string name="btn_contact">How can I contact you?</string>
    <string name="btn_location">Where is it?</string>
    <string name="btn_schedule">What should I expect?</string>
    <string name="btn_donate">Send me birthday money :p</string>
    <string name="lbl_address">Address</string>
    <string name="address">57 NotFake Road\nRealCity\nTF4 3ER\nUnited Kingdom</string>
    <string name="btn_openMaps">Open in Maps</string>
    <string name="houseimg_description">Image of the house where the event is located.</string>
    <string name="lbl_contact">Contact Details</string>
    <string name="lbl_mobile">Mobile:</string>
    <string name="lbl_email">Email:</string>
    <string name="mobileNo">+44700000293</string>
    <string name="email">U1234567@unimail.hud.ac.uk</string>
    <string name="btn_callme">Call Me!</string>
    <string name="btn_emailme">Email me!</string>
    <string name="lbl_cantcome">Unable to come? Let me know!</string>
    <string name="btn_textme">Text Me!</string>
    <string name="lbl_psst">psst.. I will be more likely to see a text message over an email!</string>
    <string name="txtEnterName">Enter your Name</string>
    <string name="lbl_donate">Birthday Money</string>
    <string name="lbl_bdaymoney">Amount in GBP</string>
    <string name="lbl_donatemsg">Add a message (optional)</string>
    <string name="btnDonate">Send!</string>
    <string name="lbl_faq">FAQ</string>
    <string name="faq_q1">When shall I arrive by?</string>
    <string name="faq_q2">What shall I wear?</string>
    <string name="faq_q3">What about the food?</string>
    <string name="faq_a1">You want to arrive at around 6 to 7pm</string>
    <string name="faq_a2">Anything smart casual will be fine</string>
    <string name="faq_a3">There will be a food table with a wide range of different foods and snacks.</string>

</resources>
