<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="96dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_address"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lblAddress"
        app:layout_constraintTop_toBottomOf="@+id/lblAddress" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="418dp"
        android:layout_height="386dp"
        android:contentDescription="@string/houseimg_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/house" />

    <Button
        android:id="@+id/btnOpenMaps"
        style="@style/buttons"
        android:layout_width="250dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_openMaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAddress"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>