<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonateActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="112dp"
        android:text="@string/lbl_donate"
        android:textAlignment="center"
        android:textAppearance="@style/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDonateName"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/txtEnterName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"/>


    <EditText
        style="@style/editText"
        android:id="@+id/txtdonateAmt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="amount"
        android:ems="10"
        android:hint="@string/lbl_bdaymoney"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDonateName" />

    <EditText
        style="@style/editText"
        android:id="@+id/txtdonatemsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="message"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/lbl_donatemsg"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdonateAmt" />

    <Button
        android:id="@+id/btnDonate"
        android:layout_width="212dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/btnDonate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdonatemsg"
        app:layout_constraintVertical_bias="0.146" />

</androidx.constraintlayout.widget.ConstraintLayout>